--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,36 @@
-body {
+*{
+    margin: 0 ;
+    padding: 0 ;
+    box-sizing: border-box ;
 
-  font-family : Arial, Helvetica, sans-serif;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
   background-color: papayawhip;
   color: royalblue;
   min-height: 100vh;
 }
-header {
 
-    border: 2px dashed red;
-    width: 50%;
-}
 h2 {
-    border: 2px dashed red;
-    width: 50%;
+  padding: 0.5em;
+  border: 2px dashed red;
+
 }
 p {
-    color: purple;
-    font-size: 32px;
-    width: 100ch;
+  color: purple;
+  font-size: 32px;
+  width: 100ch;
 }
 
 .gray {
   color: gray;
 }
 
-#second{
+.container {
+  border: 2px dashed red;
   color: purple;
   font-style: italic;
+  padding: 1.5em;
+  margin: 1.5em;
 }
-
